--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="title_activity_task_edit">Tasks</string>
     <string name="title">Title</string>
     <string name="notes">Notes</string>
+    <string name="menu_insert">Add Task</string>
+    <string name="confirm">Save</string>
+
 </resources>
