Stage 3 - Database Implemented. Will load into database but not connected to a view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="confirm">Save</string>
     <string name="delete_q">Delete?</string>
     <string name="delete">Delete</string>
+    <string name="task_saved_message">Task Saved</string>
 
 </resources>
